# aethermark

./: .coveragerc  .gitignore  .last_commit  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  changelog.md  pyproject.toml  requirements-dev.txt  requirements.txt  uninstall.cmake
.github/workflows/: changelog-gen.yml  changelog.yml  coverage.yml  publish.yml  test.yml
conda.recipe/: meta.yaml
include/: Node.hpp  NodeWalker.hpp  ruler.hpp  token.hpp
include/aethermark/: aethermark.hpp  greet.hpp  parser_block.hpp  parser_core.hpp  ruler.hpp  ruler.tpp  token.hpp  utils.hpp
include/aethermark/rules_block/: rules_block.hpp  state_block.hpp
include/aethermark/rules_core/: rules_core.hpp  state_core.hpp
include/aethermark/types/: nesting.hpp  rule.hpp  rule_options.hpp
include/helpers/: nesting.hpp  rule.hpp  rule_options.hpp
include/quantamark/: quantamark.hpp
playground/: main.cpp  main.py  play.md
python/: .pylintrc  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
python/aethermark/: __init__.py  __init__.pyi
python/bindings/: aethermark_py.cpp  quantamark_py.cpp
python/quantamark/: __init__.py  __init__.pyi
python/tests/: .pylintrc  test_basic.py  test_greet.py
src/: aethermark.cpp  binding.cpp  main.cpp  nesting.hpp  parser_block.cpp  parser_core.cpp  quantamark.cpp  ruler.cpp  token.cpp  token.hpp  utils.cpp
src/aethermark/: Node.cpp  NodeWalker.cpp  __init__.py  __init__.pyi  aethermark.pyi  binding.cpp  ruler.cpp  token.cpp
src/bindings/: binding.cpp  binding.hpp  binding_core.cpp  binding_main.cpp  binding_types.cpp
src/rules_block/: rules_block.cpp  state_block.cpp
src/rules_core/: rules_core.cpp  state_core.cpp
tests/: conftest.py  greet_test.cpp  main.cpp  ruler_test.cpp  test.py  test_basic.py  test_greet.cpp  test_main.py  test_node.py  test_node_walker.py  test_ruler.cpp  test_ruler.py  test_token.py  token_test.cpp
