[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethermark"
version = "0.0.21"
description = "Aethermark: A high-performance Markdown parser with AFM support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Mukul Waval" }
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = { find = {} }
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
aethermark = ["*.pyi", "*.so"]
