[metadata]
name = aethermark
version = 0.1.4
author = Mukul Waval
description = Aethermark C++/Python hybrid library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: C++
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.package_data]
aethermark = ["*.pyi"]

[build_ext]
inplace=0
